<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100"
    android:background="@drawable/roundshape">

    <LinearLayout
        android:id="@+id/charCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="80">
        <TextView
            android:id="@+id/tvCharCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"

            android:textSize="20sp"
            android:text="@string/string_tmp_holder"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dataLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_test"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutValuteFields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">
            <LinearLayout
                android:id="@+id/layoutCurrentField"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvCurrentLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_current"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_tmp_values"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutPreviousField"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvPreviousLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_previous"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvPreviousValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_tmp_values"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutPercentgeField"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvPercentageLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_percentage"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:id="@+id/layoutPercentageImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <TextView
                        android:id="@+id/tvPercentChange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_tmp_values"
                        android:layout_weight="30"/>
                    <ImageView
                        android:id="@+id/imgArrow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="70"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>